src/views/album-view.sass
.wrapper
  flex: 1
  display: flex
  flex-direction: column

  .albumWrapper
    display: flex
    flex: 1

    .albumInfo
      display: flex
      flex-direction: column
      flex: 1

      border-style: solid
      border-color: rgb(50, 50, 50)
      border-width: 0
      border-right-width: 1px

      .coverWrapper
        margin: 20px
        position: relative
        border-radius: 2px
        overflow: hidden

        &:after
          padding-top: 100%
          content: ''
          display: block

        .cover, .placeholder
          position: absolute

          width: 100%
          height: 100%

        .placeholder
          display: flex
          justify-content: center
          align-items: center
          background-color: rgb(30, 30, 30)
          color: rgb(50, 50, 50)

          & > *
            width: 70%
            height: 70%

      .albumTitle
        margin: 0 20px

      .download
        margin-top: 15px
        padding: 10px 20px
        display: flex
        cursor: pointer
        background-color: rgb(30, 30, 30)

        &:hover
          background-color: rgb(50, 50, 50)

        .icon
          width: 20px
          margin-right: 10px

    .musicWrapper
      display: flex
      flex-direction: column
      flex: 3
      padding: 20px

      .discWrapper
        display: flex
        flex-direction: column
        border-radius: 2px
        overflow: hidden

        .trackWrapper
          display: flex
          cursor: pointer

          background-color: rgb(40, 40, 40)

          &:nth-child(even)
            background-color: rgb(30, 30, 30)

          &:hover
            background-color: rgb(50, 50, 50)

          .number
            width: 30px
            padding: 7px
            color: rgb(150, 150, 150)
            display: flex
            justify-content: flex-end

          .title
            flex: 1
            padding: 7px

